[package]
name = "axsync"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS synchronization primitives"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axsync"
documentation = "https://arceos-org.github.io/arceos/axsync/index.html"

[features]
multitask = ["axtask/multitask"]
rcu = [
	"multitask",
	"dep:axconfig",
	"dep:axhal",
	"dep:ctor_bare",
	"dep:kernel_guard",
]
rcu-debug = ["rcu"]
default = []

[dependencies]
axtask.workspace = true
axconfig = { workspace = true, optional = true }
axhal = { workspace = true, optional = true }
ctor_bare = { workspace = true, optional = true }
event-listener.workspace = true
kernel_guard = { workspace = true, optional = true }
kspin.workspace = true
lock_api.workspace = true

[dev-dependencies]
axsync = { workspace = true, features = ["multitask"] }
axtask = { workspace = true, features = ["test"] }
# FIXME: `rand` crate can not be used since https://github.com/google/zerocopy/pull/2574
fastrand = "2.3"
